[gd_scene load_steps=17 format=2]

[ext_resource path="res://world/light.png" type="Texture" id=1]
[ext_resource path="res://lighthouse/lighthouse.png" type="Texture" id=2]
[ext_resource path="res://lighthouse/beam.png" type="Texture" id=3]
[ext_resource path="res://lighthouse/flame.wav" type="AudioStream" id=4]
[ext_resource path="res://lighthouse/LightHouse.gd" type="Script" id=5]
[ext_resource path="res://lighthouse/health_bar.png" type="Texture" id=6]
[ext_resource path="res://lighthouse/respawn.wav" type="AudioStream" id=7]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1
light_mode = 1

[sub_resource type="Animation" id=2]
resource_name = "badflicker"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 0.8, 1.2, 1.6, 1.7, 1.8, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 0.47451, 0.105882, 0.105882, 1 ), Color( 1, 1, 1, 1 ), Color( 0.47451, 0.105882, 0.105882, 1 ), Color( 1, 1, 1, 1 ), Color( 0.713726, 0.607843, 0.196078, 1 ), Color( 1, 1, 1, 1 ), Color( 0.47451, 0.105882, 0.105882, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 3, 3 ), Vector2( -3, -3 ), Vector2( 2, 2 ), Vector2( -2, -2 ), Vector2( 1, 1 ), Vector2( -1, -1 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "flicker"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.6, 1.7, 2.4, 2.5, 2.8, 2.9, 4.6, 4.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.47451, 0.105882, 0.105882, 1 ), Color( 1, 1, 1, 1 ), Color( 0.713726, 0.607843, 0.196078, 1 ), Color( 1, 1, 1, 1 ), Color( 0.47451, 0.105882, 0.105882, 1 ), Color( 1, 1, 1, 1 ), Color( 0.713726, 0.607843, 0.196078, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "start"
length = 6.0
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("../SmallLight:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4, 6 ),
"transitions": PoolRealArray( 0.2, 0.2, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../BigLight:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 4, 6 ),
"transitions": PoolRealArray( 0.2, 0.2, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.5 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 22, 12 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 20, 8 )

[sub_resource type="CircleShape2D" id=7]
radius = 16.0

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 256, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 6 )
region = Rect2( 0, 32, 256, 32 )

[node name="LightHouse" type="Area2D"]
collision_layer = 0
collision_mask = 8
script = ExtResource( 5 )

[node name="LightBeam" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 0, -31 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="LightBeam"]
autoplay = "flicker"
anims/badflicker = SubResource( 2 )
anims/flicker = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 2, -20 )
texture = ExtResource( 2 )
hframes = 3
__meta__ = {
"_edit_lock_": true
}

[node name="Start" type="AnimationPlayer" parent="Sprite"]
autoplay = "start"
anims/start = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
shape = SubResource( 5 )

[node name="SmallLight" type="Light2D" parent="."]
position = Vector2( 0, -32 )
texture = ExtResource( 1 )
texture_scale = 0.6
energy = 0.0
__meta__ = {
"_edit_lock_": true
}

[node name="BigLight" type="Light2D" parent="."]
position = Vector2( 0, -32 )
texture = ExtResource( 1 )
texture_scale = 1.2
energy = 0.0
__meta__ = {
"_edit_lock_": true
}

[node name="Rock" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rock"]
position = Vector2( 0, 2 )
shape = SubResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Respawn" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
bus = "sfx"

[node name="BulletBooster" type="Area2D" parent="."]
position = Vector2( 0, -32 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletBooster"]
shape = SubResource( 7 )

[node name="Flame" type="AudioStreamPlayer2D" parent="BulletBooster"]
stream = ExtResource( 4 )
bus = "sfx"

[node name="HUD" type="CanvasLayer" parent="."]
layer = 11

[node name="LifeBar" type="TextureProgress" parent="HUD"]
modulate = Color( 1, 1, 1, 0.752941 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -128.0
margin_top = 2.0
margin_right = 128.0
margin_bottom = 32.0
mouse_filter = 2
size_flags_horizontal = 4
texture_under = SubResource( 8 )
texture_progress = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="animation_finished" from="LightBeam/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="BulletBooster" to="." method="_on_BulletBooster_area_entered"]
